# signal-peptide-prediction-models

./: .gitignore  README.md  bert_sp_classifier_v5_2.ipynb  continuation_classifier_v5.ipynb  prot_bert_linear_classifier_notebook_v1.ipynb  prot_bert_linear_classifier_notebook_v2.ipynb  prot_bert_linear_classifier_notebook_v3.ipynb  prot_bert_linear_classifier_notebook_v5.ipynb  pyproject.toml
2-state/: sp_grad_boost_v2.ipynb  sp_grad_boost_v3.ipynb  sp_grad_boost_v5.ipynb  sp_grad_boost_v6.ipynb  sp_log_reg_v1.ipynb
4-state/: 4state_sp_classifier_v1.ipynb  4state_sp_classifier_v2.ipynb
4-state/models/: 4state_xgboost_model_v1.json  4state_xgboost_model_v2.json
6-state/: bert_sp_classifier_v2.ipynb  bert_sp_classifier_v3.ipynb  bert_sp_classifier_v5_2.ipynb  sp_classifier_v7.ipynb
binary/: binary_classifier.ipynb  binary_classifier_2d.ipynb  binary_svm.ipynb  sp_grad_boost_v5.ipynb  sp_log_reg_v1.ipynb
multiclass/: bert_sp_classifier_v4.ipynb  bert_sp_classifier_v5_2.ipynb  bert_sp_classifier_v6.ipynb  sp_classifier_current.ipynb  sp_classifier_v7.ipynb
