[project]
name = "signal-peptide-prediction-models"
version = "0.1.0"
dependencies = [
    "flax>=0.10.6",
    "flaxcrf>=0.1.0",
    "jax>=0.6.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optax>=0.2.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "typing>=3.10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
